--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         
         <div id="navbar">
       
-            <div class="imagess navIcon"  id="notebooklink">
+            <div class="imagess navIcon"  id="nameIcon">
                 <img src="images/hEd6.gif">
                 <br>
                 <img src="images/hEd8.gif">
             </div>
             <br><br><br>
             <div onclick="abtme()" id="about">
-                <div class="images navIcon"  id="notebooklink">
+                <div class="images navIcon"  id="aboutIcon">
                     <img src="images/notebook.png">
                     <br>
                     <p>about</p>
@@ -29,7 +29,7 @@
               </div>
               <br><br><br>
               <div onclick="work()" id="work">
-                <div class="images navIcon" id="computerlink">
+                <div class="images navIcon" id="gamesIcon">
                     <img src="images/computer.png">
                     <br>
                     <p>games</p>
@@ -37,7 +37,7 @@
               </div>
               <br><br><br>
               <div onclick="name()" id="name">
-                <div class="images navIcon" id="fileslink">
+                <div class="images navIcon" id="digIcon">
                     <img src="images/files.png">
                     <br>
                     <p>digital</p>
@@ -45,10 +45,10 @@
               </div>
         <br><br><br>
               <div onclick="worke()" id="worke">
-                <div class="images navIcon" id="searchlink">
+                <div class="images navIcon" id="photoIcon">
                     <img src="images/search.png">
                     <br>
-                    <p>Music</p>
+                    <p>Photos</p>
                 </div>
               </div>
 
@@ -110,27 +110,27 @@
             <p>Lesbian Lizard Life is a web based game centered around the New Mexico Whiptail Lizard, an all female species that reproduces asexually (lesbian lizards) native to my home state. The game is based on the 90s-early 2000s games for girls aesthetics I experienced as a child, formative to my identity as a game designer. This lesbian/queer woman-centric game explores and experiments with shapeshifting, gender bending, and transforming oneself through digital spaces. The game toys with “games for girls” aesthetics while providing the player with a non-binary customization system for a broader range of queer expression. The game acts as a model for transcending and subverting typical gendered avatar customization systems through various forms of self expression in mini games. Created by real life lesbian lizard gfs Sloane Dove and Alexandra Violet. </p>
             <br>
 </div>
-<br /><br /><br />
+<br />
             <img
             class="drawHot"
             src="gamecontent/planUrOwnFuneral.gif"
           />
-          <br /><br /><br />
+          <br />
           <div class="gameText">
             <p class="names"> Plan Your Own Funeral  </p>
             <p class="names">HTML, CSS, Javascript, 2021</p>
        </div>
-       <br /><br /><br />
+       <br />
        <img
        class="drawHot"
        src="gamecontent/littletreat.gif"
      />
-     <br /><br /><br />
+     <br />
      <div class="gameText">
        <p class="names"> Little Treats for Little Girls Like Me to Eat  </p>
        <p class="names">HTML, CSS, Javascript, 2020</p>
   </div>
-  <br /><br /><br />
+  <br />
         </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
         />
         <br><br><br>
         <img
-        class="drawh"
+        classgit="drawh"
         src="process/cakes.png"
       />
       <br><br><br>
