digital image updates

--- a/index.html
+++ b/index.html
@@ -195,6 +195,47 @@
     class="drawh"
     src="process/closet.png"
   />
+
+  <img
+  class="drawh"
+  src="process/funeral.png"
+/>
+<br><br><br>
+<img
+class="drawh"
+src="process/gay.png"
+/>
+<br><br><br>
+
+<img
+class="drawh"
+src="process/horses.png"
+/>
+<br><br><br>
+<img
+class="drawh"
+src="process/kingdom.png"
+/>
+<br><br><br>
+<img
+classgit="drawh"
+src="process/lizard.png"
+/>
+<br><br><br>
+<img
+class="drawh"
+src="process/tweety.png"
+/>
+<br><br><br>
+<img
+class="drawh"
+src="process/wwwf.png"
+/>
+<br><br><br>
+<img
+class="drawh"
+src="process/xan.png"
+/>
 </div>
             </div>
           </div>
