--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ src="process/xan.png"
         <br><br><br>
         <img
         classgit="drawh"
-        src="photography/sept 2024 update/5.jpg"
+        src="photography/sept 2024 update/5.JPG"
       />
       <br><br><br>
       <img
@@ -321,7 +321,7 @@ src="process/xan.png"
     <br><br><br>
     <img
     class="drawh"
-    src="photography/sept 2024 update/7.jpg"
+    src="photography/sept 2024 update/7.JPG"
   />
 
   <img
@@ -337,7 +337,7 @@ src="photography/sept 2024 update/10.jpg"
 
 <img
 class="drawh"
-src="photography/sept 2024 update/11.jpg"
+src="photography/sept 2024 update/11.JPG"
 />
 <br><br><br>
 <img
@@ -357,7 +357,7 @@ src="photography/sept 2024 update/14.jpg"
 <br><br><br>
 <img
 class="drawh"
-src="photography/sept 2024 update/15.jpg"
+src="photography/sept 2024 update/15.JPG"
 />
 
 <img
@@ -367,7 +367,7 @@ src="photography/sept 2024 update/16.png"
 <br><br><br>
 <img
 class="drawh"
-src="photography/sept 2024 update/17.jpg"
+src="photography/sept 2024 update/17.JPG"
 />
 <br><br><br>
 
@@ -427,14 +427,11 @@ class="drawh"
 src="photography/sept 2024 update/28.jpg"
 />
 <br><br><br>
-<img
-class="drawh"
-src="photography/sept 2024 update/28.jpg"
-/>
+
 
 <img
 class="drawh"
-src="photography/sept 2024 update/29.jpg"
+src="photography/sept 2024 update/29.JPG"
 />
 <br><br><br>
 <img
@@ -496,7 +493,7 @@ src="photography/sept 2024 update/42.jpg"
 <br><br><br>
 <img
 class="drawh"
-src="photography/sept 2024 update/43.jpg"
+src="photography/sept 2024 update/43.JPG"
 />
 <br><br><br>
 <img
@@ -573,7 +570,7 @@ src="photography/sept 2024 update/59.jpg"
 <br><br><br>
 <img
 class="drawh"
-src="photography/sept 2024 update/60.jpg"
+src="photography/sept 2024 update/60.JPG"
 />
 
 <img
@@ -599,7 +596,7 @@ src="photography/sept 2024 update/64.jpg"
 
 <img
 class="drawh"
-src="photography/sept 2024 update/65.jpg"
+src="photography/sept 2024 update/65.JPG"
 />
 <br><br><br>
 <img
@@ -614,7 +611,7 @@ src="photography/sept 2024 update/67.jpg"
 <br><br><br>
 <img
 class="drawh"
-src="photography/sept 2024 update/68.jpg"
+src="photography/sept 2024 update/68.JPG"
 />
 <br><br><br>
 <img
@@ -644,21 +641,21 @@ src="photography/virgin.jpg"
             <img src="photography/sept 2024 update/1.jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/2.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/3.jpg" alt="Image 3" class="popup-image">
-            <img src="photography/sept 2024 update/4.JPG" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/5.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/4.jpg" alt="Image 1" class="popup-image">
+            <img src="photography/sept 2024 update/5.JPG" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/6.png" alt="Image 3" class="popup-image">
-            <img src="photography/sept 2024 update/7.jpg" alt="Image 1" class="popup-image">
+            <img src="photography/sept 2024 update/7.JPG" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/8.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/9.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/10.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/11.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/11.JPG" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/12.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/13.jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/14.jpg" alt="Image 2" class="popup-image">
-            <img src="photography/sept 2024 update/15.jpg" alt="Image 3" class="popup-image">
+            <img src="photography/sept 2024 update/15.JPG" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/16.png" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/17.jpg" alt="Image 2" class="popup-image">
-            <img src="photography/sept 2024 update/18.JPG" alt="Image 3" class="popup-image">
+            <img src="photography/sept 2024 update/17.JPG" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/18.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/19(1).jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/20.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/21.jpg" alt="Image 3" class="popup-image">
@@ -666,33 +663,33 @@ src="photography/virgin.jpg"
             <img src="photography/sept 2024 update/23(1).jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/24.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/26.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/27.JPG" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/27.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/28.jpg" alt="Image 3" class="popup-image">
-            <img src="photography/sept 2024 update/29.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/30.JPG" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/29.JPG" alt="Image 1" class="popup-image">
+            <img src="photography/sept 2024 update/30.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/62.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/32.jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/33.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/35.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/36.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/37.JPG" alt="Image 2" class="popup-image">
-            <img src="photography/sept 2024 update/38.JPG" alt="Image 3" class="popup-image">
+            <img src="photography/sept 2024 update/37.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/38.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/39.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/68.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/68.JPG" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/41.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/42.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/43.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/43.JPG" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/44.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/45.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/46.jpg" alt="Image 3" class="popup-image">
-            <img src="photography/sept 2024 update/61.JPG" alt="Image 1" class="popup-image">
+            <img src="photography/sept 2024 update/61.jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/48.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/49.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/51.jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/52.jpg" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/53.jpeg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/54.png" alt="Image 1" class="popup-image">
-            <img src="photography/sept 2024 update/55.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/sept 2024 update/55.JPG" alt="Image 2" class="popup-image">
             <img src="photography/sept 2024 update/56.jpg" alt="Image 3" class="popup-image">
             <img src="photography/sept 2024 update/57.jpg" alt="Image 1" class="popup-image">
             <img src="photography/sept 2024 update/59.jpg" alt="Image 2" class="popup-image">
