--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ src="photography/sept 2024 update/61.jpg"
 class="drawh"
 src="photography/sept 2024 update/62.jpg"
 />
-
+<div class="spacer"></div>
 <img
 class="drawh"
 src="photography/sept 2024 update/63.jpg"
@@ -627,6 +627,21 @@ src="photography/sept 2024 update/68.JPG"
 <img
 class="drawh"
 src="photography/virgin.jpg"
+/>
+<div class="spacer"></div>
+<img
+class="drawh"
+src="newphotos/missed.png"
+/>
+<div class="spacer"></div>
+<img
+class="drawh"
+src="newphotos/missed2.png"
+/>
+<div class="spacer"></div>
+<img
+class="drawh"
+src="newphotos/missed3.png"
 />
 
 
