--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ src="newphotos/missed3.png"
             <!-- Add more images as needed -->
         </div>
         <div class="popup" id="popup">
-          <p id="closeImage">X</p>
+          <p id="closeImage">XL</p>
             <img src="" alt="Popup Image" id="popup-image">
         </div>
       
