--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ src="process/xan.png"
    <div class="spacer"></div>
     <img
     class="drawh"
-    src="photography/m25/7.JPG"
+    src="photography/m25/7.jpg"
   />
   <div class="spacer"></div>
   <img
@@ -372,7 +372,7 @@ src="photography/m25/14.jpeg"
 <div class="spacer"></div>
 <img
 class="drawh"
-src="photography/m25/15.JPG"
+src="photography/m25/15.jpg"
 />
 
 <img
@@ -382,7 +382,7 @@ src="photography/m25/16.png"
 <div class="spacer"></div>
 <img
 class="drawh"
-src="photography/m25/17.JPG"
+src="photography/m25/17.jpg"
 />
 <div class="spacer"></div>
 
@@ -575,22 +575,22 @@ src="photography/m25/53.JPG"
         <div class="image-container imagesDesktop">
             
             <img src="photography/m25/1.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/m25/2.jpg" alt="Image 2" class="popup-image">
+            <img src="photography/m25/2.JPG" alt="Image 2" class="popup-image">
             <img src="photography/m25/3.jpg" alt="Image 3" class="popup-image">
             <img src="photography/m25/4.jpg" alt="Image 1" class="popup-image">
             <img src="photography/m25/5.JPG" alt="Image 2" class="popup-image">
             <img src="photography/m25/6.png" alt="Image 3" class="popup-image">
-            <img src="photography/m25/7.JPG" alt="Image 1" class="popup-image">
+            <img src="photography/m25/7.jpg" alt="Image 1" class="popup-image">
             <img src="photography/m25/8.jpg" alt="Image 2" class="popup-image">
             <img src="photography/m25/9.jpg" alt="Image 3" class="popup-image">
             <img src="photography/m25/10.jpg" alt="Image 1" class="popup-image">
-            <img src="photography/m25/11.JPG" alt="Image 2" class="popup-image">
+            <img src="photography/m25/11.jpg" alt="Image 2" class="popup-image">
             <img src="photography/m25/12.jpg" alt="Image 3" class="popup-image">
             <img src="photography/m25/13.jpg" alt="Image 1" class="popup-image">
             <img src="photography/m25/14.jpeg" alt="Image 2" class="popup-image">
-            <img src="photography/m25/15.JPG" alt="Image 3" class="popup-image">
+            <img src="photography/m25/15.jpg" alt="Image 3" class="popup-image">
             <img src="photography/m25/16.png" alt="Image 1" class="popup-image">
-            <img src="photography/m25/17.JPG" alt="Image 2" class="popup-image">
+            <img src="photography/m25/17.jpg" alt="Image 2" class="popup-image">
             <img src="photography/m25/18.jpg" alt="Image 3" class="popup-image">
             <img src="photography/m25/19.jpg" alt="Image 1" class="popup-image">
             <img src="photography/m25/20.png" alt="Image 2" class="popup-image">
@@ -598,13 +598,13 @@ src="photography/m25/53.JPG"
             <img src="photography/m25/23.jpg" alt="Image 2" class="popup-image">
             <img src="photography/m25/24.png" alt="Image 3" class="popup-image">
             <img src="photography/m25/25.jpg" alt="Image 3" class="popup-image">
-            <img src="photography/m25/29.JPG" alt="Image 1" class="popup-image">
+            <img src="photography/m25/29.jpg" alt="Image 1" class="popup-image">
             <img src="photography/m25/30.png" alt="Image 2" class="popup-image">
             <img src="photography/m25/31.JPG" alt="Image 3" class="popup-image">
             <img src="photography/m25/32.jpg" alt="Image 1" class="popup-image">
             <img src="photography/m25/33.jpg" alt="Image 2" class="popup-image">
             <img src="photography/m25/34.jpeg" alt="Image 2" class="popup-image">
-            <img src="photography/m25/35.jpg" alt="Image 3" class="popup-image">
+            <img src="photography/m25/35.JPG" alt="Image 3" class="popup-image">
             <img src="photography/m25/36.png" alt="Image 1" class="popup-image">
             <img src="photography/m25/37.png" alt="Image 2" class="popup-image">
             <img src="photography/m25/38.jpg" alt="Image 3" class="popup-image">
